@@ -408,6 +408,9 @@ Library
 Tests
 -----
 
+- Issue #16896: test_asyncore now works with unittest test discovery.
+  Patch by Zachary Ware.
+
 - Issue #16897: test_bisect now works with unittest test discovery.
   Initial patch by Zachary Ware.
 
